[workspace]

resolver = "2"

members = [
	# Executable
	"dw2003_exe",
	"dw2003_exe_data",
	"dw2003_exe_digimon_profiles",
	"dw2003_exe_lba",

	# Libraries
	"dw2003_pro_stfgtrep",
	"dw2003_pro_stgtrain",
	"dw2003_pro_sdigiedt",
	"dw2003_pro_fieldstg",
	"dw2003_pro_stitshop",

	# Utilities
	"types",
	"util",
	"panic_handler",
]

[workspace.dependencies]

# Workspace
dw2003_exe = { path = "dw2003_exe" }
dw2003_exe_data = { path = "dw2003_exe_data" }
dw2003_exe_digimon_profiles = { path = "dw2003_exe_digimon_profiles" }
dw2003_exe_lba = { path = "dw2003_exe_lba" }
dw2003_pro_stfgtrep = { path = "dw2003_pro_stfgtrep" }
dw2003_pro_stgtrain = { path = "dw2003_pro_stgtrain" }
dw2003_pro_sdigiedt = { path = "dw2003_pro_sdigiedt" }
dw2003_pro_fieldstg = { path = "dw2003_pro_fieldstg" }
dw2003_pro_stitshop = { path = "dw2003_pro_stitshop" }
types = { path = "types" }
util = { path = "util" }
panic_handler = { path = "panic_handler" }
