[workspace]

resolver = "2"

members = [
	# Cdrom
	"ddw3-cdrom-xa",
	"ddw3-uncd",

	# ISO
	"ddw3-iso9660",
	"ddw3-uniso",

	# Psexe
	"ddw3-psexe",
	"ddw3-mkpsexe",

	# Lang file
	"ddw3-lang-file",
	"ddw3-unlang-file",
	"ddw3-mklang-file",

	# Tim
	"ddw3-tim",
	"ddw3-untim",
	"ddw3-mktim",

	# Pack
	"ddw3-unpack",
	"ddw3-mkpack",

	# Map
	"ddw3-unmap",
	"ddw3-mkmap",
	"ddw3-unmap-tile",
	"ddw3-mkmap-tile",

	# RLen
	"ddw3-unrlen",
	"ddw3-mkrlen",

	# Sound
	"ddw3-vab-sep",
	"ddw3-unvab-sep",

	# Util
	"ddw3-bytes",
	"ddw3-util",
	"ddw3-logger",
]

[workspace.dependencies]

anyhow = "1.0.75"
arrayref = "0.3.7"
ascii = "1.1.0"
bitflags = "2.4.0"
byteorder = "1.4.3"
clap = { version = "4.4.1", features = ["derive"] }
derive_more = "0.99.17"
either = "1.9.0"
extend = "1.2.0"
goblin = "0.7.1"
image = "0.24.7"
int-conv = "0.1.4"
itertools = "0.11.0"
pathdiff = "0.2.1"
ref-cast = "1.0.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["hex"] }
serde_yaml = "0.9.25"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xml-rs = "0.8.16"
hex-literal = "0.4.1"
hound = "3.5.1"
bytemuck = "1.13.1"

# Workspace
ddw3-bytes = { path = "ddw3-bytes" }
ddw3-cdrom-xa = { path = "ddw3-cdrom-xa" }
ddw3-iso9660 = { path = "ddw3-iso9660" }
ddw3-lang-file = { path = "ddw3-lang-file" }
ddw3-logger = { path = "ddw3-logger" }
ddw3-mklang-file = { path = "ddw3-mklang-file" }
ddw3-mkpsexe = { path = "ddw3-mkpsexe" }
ddw3-mkrlen = { path = "ddw3-mkrlen" }
ddw3-mkmap = { path = "ddw3-mkmap" }
ddw3-mkmap-tile = { path = "ddw3-mkmap-tile" }
ddw3-mkpack = { path = "ddw3-mkpack" }
ddw3-mktim = { path = "ddw3-untim" }
ddw3-psexe = { path = "ddw3-psexe" }
ddw3-tim = { path = "ddw3-tim" }
ddw3-uncd = { path = "ddw3-uncd" }
ddw3-uniso = { path = "ddw3-uniso" }
ddw3-unlang-file = { path = "ddw3-unlang-file" }
ddw3-unmap = { path = "ddw3-unmap" }
ddw3-unmap-tile = { path = "ddw3-unmap-tile" }
ddw3-unpack = { path = "ddw3-unpack" }
ddw3-unrlen = { path = "ddw3-unrlen" }
ddw3-untim = { path = "ddw3-untim" }
ddw3-unvab-sep = { path = "ddw3-unvab-sep" }
ddw3-util = { path = "ddw3-util" }
ddw3-vab-sep = { path = "ddw3-vab-sep" }
