[workspace]

resolver = "2"

members = [
	# Cdrom
	"ddw3-cdrom-xa",
	"ddw3-uncd",

	# ISO
	"ddw3-iso9660",
	"ddw3-uniso",

	# Psexe
	"ddw3-psexe",
	"ddw3-psexe-tools",

	# Lang file
	"ddw3-lang-file",
	"ddw3-lang-file-tools",

	# Tim
	"ddw3-tim",
	"ddw3-tim-tools",

	# Pack
	"ddw3-pack-tools",

	# Map
	"ddw3-map-tools",
	"ddw3-map-tile-tools",

	# RLen
	"ddw3-rlen-tools",

	# Sound
	"ddw3-vab-sep",
	"ddw3-unvab-sep",

	# Util
	"ddw3-bytes",
	"ddw3-util",
	"ddw3-logger",
]

[workspace.dependencies]

anyhow = "1.0.75"
arrayref = "0.3.7"
ascii = "1.1.0"
binrw = "0.13.1"
bitflags = "2.4.0"
bytemuck = "1.13.1"
byteorder = "1.4.3"
clap = { version = "4.4.1", features = ["derive"] }
derive_more = "0.99.17"
either = "1.9.0"
extend = "1.2.0"
goblin = "0.7.1"
hex-literal = "0.4.1"
hound = "3.5.1"
image = "0.24.7"
int-conv = "0.1.4"
itertools = "0.11.0"
pathdiff = "0.2.1"
ref-cast = "1.0.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = { version = "3.3.0", features = ["hex"] }
toml = "0.8.8"
thiserror = "1.0.47"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
xml-rs = "0.8.16"

# Workspace
ddw3-bytes = { path = "ddw3-bytes" }
ddw3-cdrom-xa = { path = "ddw3-cdrom-xa" }
ddw3-iso9660 = { path = "ddw3-iso9660" }
ddw3-lang-file = { path = "ddw3-lang-file" }
ddw3-lang-file-tools = { path = "ddw3-lang-file-tools" }
ddw3-logger = { path = "ddw3-logger" }
ddw3-map-tile-tools = { path = "ddw3-map-tile-tools" }
ddw3-map-tools = { path = "ddw3-map-tools" }
ddw3-pack-tools = { path = "ddw3-pack-tools" }
ddw3-psexe = { path = "ddw3-psexe" }
ddw3-psexe-tools = { path = "ddw3-psexe-tools" }
ddw3-rlen-tools = { path = "ddw3-rlen-tools" }
ddw3-tim = { path = "ddw3-tim" }
ddw3-tim-tools = { path = "ddw3-tim-tools" }
ddw3-uncd = { path = "ddw3-uncd" }
ddw3-uniso = { path = "ddw3-uniso" }
ddw3-unvab-sep = { path = "ddw3-unvab-sep" }
ddw3-util = { path = "ddw3-util" }
ddw3-vab-sep = { path = "ddw3-vab-sep" }
