[package]
edition = "2021"
name = "dw2003_exe_digimon_profiles"
version = "0.1.0"

[dependencies]

# Workspace
panic_handler = { workspace = true }
types = { workspace = true }
util = { workspace = true }

[build-dependencies]

# Workspace
types = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
