[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2021"
name = "ddw3-cdrom-xa"
version = "0.1.0"

[dependencies]

bitflags = { workspace = true }
byteorder = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-util = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
