[package]
edition = "2021"
name = "ddw3-iso9660"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-util = { workspace = true }
extend = { workspace = true }
ref-cast = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
