[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2021"
name = "ddw3-lang-file"
version = "0.1.0"

[dependencies]

# Logging
tracing = "0.1.37"

# Error handling
anyhow = "1.0.65"

# Util
byteorder = "1.4.3"
itertools = "0.10.5"
serde_with = "3.3.0"
serde = "1.0.188"
