[package]
edition = "2021"
name = "ddw3-mklang-file"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-lang-file = { workspace = true }
ddw3-logger = { workspace = true }
ddw3-util = { workspace = true }
either = { workspace = true }
itertools = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
