[package]
edition = "2021"
name = "ddw3-mkpsexe"
version = "0.1.0"

[dependencies]

# Ddw3
ddw3-logger = { path = "../ddw3-logger" }

# Cmd
clap = { version = "4.0.11", features = ["derive"] }

# Logging
tracing = "0.1.37"

# Error handling
anyhow = "1.0.65"

# Elf
goblin = "0.5.4"

# Util
byteorder = "1.4.3"
