[package]
edition = "2021"
name = "ddw3-mkraw_exe"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-logger = { workspace = true }
goblin = { workspace = true }
tracing = { workspace = true }
