[package]
edition = "2021"
name = "ddw3-psexe-tools"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-util = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-logger = { workspace = true }
ddw3-psexe = { workspace = true }
goblin = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
