[package]
edition = "2021"
name = "ddw3-tim"
version = "0.1.0"

[dependencies]

# Dcb
ddw3-bytes = { path = "../ddw3-bytes" }

# Logging
tracing = "0.1.37"

# Image
image = "0.24.4"

# Error handling
anyhow = "1.0.65"
thiserror = "1.0.37"

# Util
byteorder = "1.4.3"
itertools = "0.10.5"
pathdiff = "0.2.1"

# Serde
serde = { version = "1.0.145", features = ["derive"] }
