[package]
edition = "2021"
name = "ddw3-tim"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
ddw3-bytes = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
image = { workspace = true }
itertools = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
