[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2021"
name = "ddw3-uncd"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true }
ddw3-cdrom-xa = { workspace = true }
ddw3-logger = { workspace = true }
tracing = { workspace = true }
