[package]
edition = "2021"
name = "ddw3-uniso"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
ascii = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-iso9660 = { workspace = true }
ddw3-logger = { workspace = true }
ddw3-util = { workspace = true }
derive_more = { workspace = true }
int-conv = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
xml-rs = { workspace = true }
