[package]
edition = "2021"
name = "ddw3-unrlen"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-logger = { workspace = true }
itertools = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
