[package]
edition = "2021"
name = "ddw3-untim"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
ddw3-bytes = { workspace = true }
ddw3-logger = { workspace = true }
ddw3-tim = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
