[package]
edition = "2021"
name = "ddw3-util"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
ascii = { workspace = true }
either = { workspace = true }
extend = { workspace = true }
ref-cast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
