[package]
edition = "2021"
name = "replace-bytes"
version = "0.1.0"

[dependencies]

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ddw3-logger = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde-tuple-vec-map = { workspace = true }
tracing = { workspace = true }
